--- a/components/globals.css
+++ b/components/globals.css
@@ -140,6 +140,10 @@
   body {
     @apply bg-background text-foreground;
   }
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
 }
 
 .grecaptcha-badge { visibility: hidden; }
